--- a/style.css
+++ b/style.css
@@ -1,22 +1,60 @@
-body {
-    background-color: #2f4f4f;
-    color: white;
+@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:ital,wght@0,600;1,600&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
 }
 
-a {
-    background-color: yellow;
-    color: black;
+body{
+    height: 100vh;
+    box-sizing: border-box;
+    background-color: #000000;
+    color: #F6F6F6;
 }
 
-header {
-    color: rgb(250, 234, 7);
+.titulo-destaque {
+    color: #22D4FD;
+}
+
+.apresentacao {
+    margin: 10% 8%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;    
+}
+
+.apresentacao__conteudo{
+    width: 615px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
+.apresentacao__conteudo__titulo {
+    font-size: 36px;
+    font-family: "Krona One", sans-serif;
+}
+
+.apresentacao__conteudo__texto {
+    font-size: 24px;
+    font-family: "Montserrat", sans-serif;
+}
+
+.apresentacao__links {
+    display: flex;
+    justify-content: space-between;
     
 }
 
-h1 {
-    color: rgb(235, 235, 38);
-}
-
-p {
-    color: yellowgreen;
+.apresentacao__links__link {
+    background-color: #22d4fe;
+    width: 200px;
+    text-align: center;
+    font-weight: 600;
+    border-radius: 16px;
+    font-size: 20px;
+    padding: 10px 0;
+    text-decoration: none;
+    color: #000000;
+    font-family: "Montserrat", sans-serif;
 }
