--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body{
-    height: 100vh;
+    /* height: 100vh; */
     box-sizing: border-box;
     background-color: #000000;
     color: #F6F6F6;
@@ -17,7 +17,7 @@ body{
 }
 
 .apresentacao {
-    margin: 10% 8%;
+    padding: 10% 15%;
     display: flex;
     align-items: center;
     justify-content: space-between;      
@@ -27,7 +27,7 @@ body{
     width: 615px;
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 20px;
     
 }
 
@@ -37,7 +37,7 @@ body{
 }
 
 .apresentacao__conteudo__texto {
-    font-size: 24px;
+    font-size: 20px;
     font-family: "Montserrat", sans-serif;
 }
 
@@ -65,7 +65,7 @@ body{
     font-weight: 600;
     border-radius: 8px;
     font-size: 20px;
-    padding: 10px 0;
+    padding: 8px 0;
     text-decoration: none;
     color: #f6f6f6;
     font-family: "Montserrat", sans-serif;
@@ -74,4 +74,14 @@ body{
 .apresentacao__links__link:hover {
     background-color: #272727;
     font-size: 18px;
+}
+
+.rodape {
+    color: #000000;
+    background-color: #22D4FD;
+    padding: 24px;
+    text-align: center;
+    font-family: "Montserrat", sans-serif;
+    font-size: 24px;
+    font-weight: 400;
 }
