--- a/styles/style.css
+++ b/styles/style.css
@@ -38,6 +38,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 82px;
 }
 .apresentacao__conteudo{
     width: 50%;
@@ -88,7 +89,7 @@ body{
 .apresentacao__links__navegacao:hover{
     background-color: var(--cor-hover);
 }
-.apresentacao__imagem{
+.imagem{
     width: 50%;
 }
 .rodape{
@@ -99,4 +100,22 @@ body{
     font-family: var(--fonte-secundaria);
     font-size: 1.5rem;
     font-weight: 400;
+}
+
+@media (max-width:1200px){
+    .cabecalho {
+        padding: 10%;        
+    }
+       
+    .cabecalho__menu {
+        justify-content: center;
+    }
+
+    .apresentacao{
+        flex-direction: column-reverse;
+    }
+
+    .apresentacao__conteudo {
+        width: auto;
+    }
 }
