--- a/styles/style.css
+++ b/styles/style.css
@@ -64,7 +64,7 @@ body{
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    gap: 32px;
+    gap: 16px;
 }
 .apresentacao__links__subtitulo{
     font-family: var(--fonte-primaria);
@@ -81,7 +81,7 @@ body{
     border-radius: 8px;
     font-size: 1.5rem;
     font-weight: 600;
-    padding: 21.5px 0;
+    padding: 5px;
     text-decoration: none;
     color: var(--cor-secundaria);
     font-family: var(--fonte-secundaria);
